# nova

./: CMakeLists.txt  LICENSE  README.md
.github/: dfsan_abi_list.txt  lizard_whitelist.txt
.github/workflows/: build-android-test.yml  build-android.yml  build-bare-metal-test.yml  build-bare-metal.yml  build-hosted.yml  build-matrix.yml  build-rtos-test.yml  build-rtos.yml  clang-tidy.yml  cppcheck.yml  lizard.yml  sanitizers-asan.yml  sanitizers-dfsan.yml  sanitizers-libfuzzer.yml  sanitizers-lsan.yml  sanitizers-msan.yml  sanitizers-tsan.yml  sanitizers-ubsan.yml
benchmarks/: CMakeLists.txt  README.md  benchmark_flare_emergency.cpp  benchmark_formatted_file_output.cpp  benchmark_latency.cpp  benchmark_launcher.cpp  benchmark_memory_pool_async.cpp  benchmark_nova_builders.cpp  benchmark_nova_sinks.cpp  benchmark_throughput.cpp  easylogging_impl.cpp
cmake/: NovaConfig.cmake.in  Sanitizers.cmake
cmake/toolchains/: README.md  android-ndk.cmake  arm-none-eabi-cortex-m3.cmake  arm-none-eabi-cortex-m4.cmake
docs/: CPP_VERSION_COMPATIBILITY.md  FLARE_README.md  FLARE_USE_CASES.md  LIBRARY_MIGRATION.md  SAFETY_CRITICAL_GUIDELINES.md
examples/: BUILD.md  CMakeLists.txt  README.md
examples/01_basic_usage/: main.cpp
examples/02_multiple_sinks/: main.cpp
examples/03_custom_clock/: main.cpp
examples/04_multithreading/: main.cpp
examples/05_filtering/: main.cpp
examples/06_hierarchical_tags/: main.cpp
examples/07_flare/: !CMakeLists.txt  main.cpp  test_tags.dict
examples/08_bare_metal/: main.cpp
examples/09_diagnostics/: main.cpp
flare/include/kmac/flare/: emergency_sink.h  fd_writer.h  file_writer.h  iwriter.h  ram_writer.h  reader.h  record.h  scanner.h  tlv.h
flare/scripts/: flare_dict_gen.py  flare_reader.py
flare/src/kmac/flare/: emergency_sink.cpp  fd_writer.cpp  file_writer.cpp  reader.cpp  record.cpp  scanner.cpp  uart_writer.cpp
fuzz/: CMakeLists.txt  flare.dict  fuzz_continuation_builder.cpp  fuzz_flare_reader.cpp  fuzz_flare_scanner.cpp  fuzz_record_builder.cpp
fuzz/corpus/record_builder/: typical_message.txt
libs/nova/: CMakeLists.txt
libs/nova/include/kmac/nova/: details.h  immovable.h  logger.h  logger_traits.h  nova.h  null_logging.h  performance_metrics.h  record.h  scoped_configurator.h  sink.h  timestamp_helper.h  truncating_logging.h  version.h
libs/nova_extras/: CMakeLists.txt
libs/nova_extras/include/kmac/nova/extras/: android_log_sink.h  bounded_composite_sink.h  buffer.h  builder_stream_qt.h  builder_stream_std.h  circular_file_sink.h  composite_sink.h  continuation_logging.h  csv_formatter.h  custom_formatter.h  filter_sink.h  fixed_composite_sink.h  formatter.h  formatting_file_sink.h  formatting_helper.h  formatting_sink.h  hierarchical_tag.h  iso8601_formatter.h  json_formatter.h  large_payload_formatter.h  memory_pool.h  memory_pool_async_batch_sink.h  memory_pool_async_sink.h  mpsc_queue.h  multi_record_formatter.h  multiline_formatter.h  null_logging.h  null_sink.h  ostream_sink.h  qt_log_sink.h  quick_start.h  ram_sink.h  rolling_file_sink.h  severities.h  spinlock_sink.h  streaming_logging.h  synchronized_composite_sink.h  synchronized_sink.h  syslog_sink.h  truncating_buffer.h  (+2 more)
libs/nova_extras/src/kmac/nova/extras/: buffer.cpp  circular_file_sink.cpp  composite_sink.cpp  csv_formatter.cpp  fixed_composite_sink.cpp  formatting_helper.cpp  iso8601_formatter.cpp  json_formatter.cpp  large_payload_formatter.cpp  multiline_formatter.cpp  null_sink.cpp  ostream_sink.cpp  quick_start.cpp  rolling_file_sink.cpp  spinlock_sink.cpp  synchronized_composite_sink.cpp  synchronized_sink.cpp  truncating_buffer.cpp  xml_formatter.cpp
libs/nova_flare/include/kmac/flare/: bare_metal_fault_handler.h  emergency_sink.h  fault_context.h  fd_writer.h  file_writer.h  iwriter.h  ram_writer.h  reader.h  record.h  scanner.h  signal_handler.h  tlv.h  uart_writer.h
libs/nova_flare/scripts/: flare_dict_gen.py  flare_reader.py  test_flare_reader.py
libs/nova_flare/src/kmac/flare/: bare_metal_fault_handler.cpp  bare_metal_fault_handler_asm.s  emergency_sink.cpp  fd_writer.cpp  file_writer.cpp  ram_writer.cpp  reader.cpp  record.cpp  scanner.cpp  signal_handler.cpp  uart_writer.cpp
nova/: CMakeLists.txt
nova/include/kmac/nova/: builder_wrapper.h  continuation_record_builder.h  details.h  immovable.h  logger.h  logger_traits.h  nova.h  null_record_builder.h  performance_metrics.h  record.h  scoped_configurator.h  sink.h  timestamp_helper.h  truncating_logging.h  truncating_record_builder.h  version.h
nova/include/kmac/nova/platform/: atomic.h  chrono.h  config.h  string_view.h
nova_extras/include/kmac/nova/extras/: bounded_composite_sink.h  buffer.h  circular_file_sink.h  composite_sink.h  continuation_logging.h  filter_sink.h  fixed_composite_sink.h  formatting_file_sink.h  formatting_sink.h  hierarchical_tag.h  iso8601_formatter.h  large_payload_formatter.h  memory_pool.h  memory_pool_async_batch_sink.h  memory_pool_async_sink.h  mpsc_queue.h  multiline_formatter.h  null_sink.h  ostream_sink.h  rolling_file_sink.h  severities.h  spinlock_sink.h  streaming_formatter.h  streaming_logging.h  streaming_macros.h  streaming_record_builder.h  (+3 more)
tests/: CMakeLists.txt  README.md  nova_c11_check.cpp  test_flare_emergency.cpp  test_flare_reader.cpp  test_flare_scanner.cpp  test_flare_writers.cpp  test_helpers.h  test_integration.cpp  test_nova_circular_file_sink.cpp  test_nova_composite.cpp  test_nova_core.cpp  test_nova_custom_formatter.cpp  test_nova_formatters.cpp  test_nova_logger.cpp  test_nova_memory_pool_async_sink.cpp  test_nova_mpsc_queue.cpp  test_nova_record_builders.cpp  test_nova_rolling_file_sink.cpp  test_nova_scoped_configurator.cpp  test_nova_sinks.cpp  test_nova_synchronization.cpp
tests/bare_metal/: CMakeLists.txt  test_nova_bare_metal.cpp
tests/bare_metal/qemu/: mps2-an385.ld  semihosting.c  semihosting.h  startup_cortex_m3.c
tests/rtos/: CMakeLists.txt  test_nova_rtos.cpp
tests/rtos/freertos_config/: FreeRTOSConfig.h
tests/rtos/qemu/: lm3s6965evb.ld  mps2-an385.ld  semihosting.c  startup_lm3s6965evb.c
(+21 files in other folders)
